Update recent blog post bg color
Signed-off-by: mohin7 <mohin@appscode.com>

--- a/static/assets/sass/layouts/_blog-page.scss
+++ b/static/assets/sass/layouts/_blog-page.scss
@@ -112,7 +112,7 @@
 
 // section title small end
 .recent-blog-posts {
-  background-color: $primary-97;
+  background-color: $secondary-97;
   padding: 60px 0 70px;
 
   .button.is-mini {
