Update button state
Signed-off-by: mohin7 <mohin@appscode.com>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -434,9 +434,9 @@
               <!-- navbar items end -->
               <div class="buttons">
                 <a id="ac-sign-in-button" href="https://accounts.appscode.com/user/login"
-                class="button is-primary ac-button is-loading"><span>SIGN IN</span></a>
+                class="button ac-button is-primary is-outlined is-loading"><span>SIGN IN</span></a>
                 <a href="{{ $.Site.Params.domain_appscode }}/contact/"
-                class="button ac-button is-primary is-outlined">CONTACT
+                class="button is-primary ac-button">CONTACT
                 SALES</a>
               </div>
              </div>
