--- a/static/assets/sass/base/utilities/_global.scss
+++ b/static/assets/sass/base/utilities/_global.scss
@@ -513,6 +513,30 @@
     transform: scale3d(1, 1, 1);
   }
 }
+.text-underline {
+  font-weight: 500;
+  position: relative;
+  text-decoration: underline;
+
+  &:after {
+    position: absolute;
+    content: "";
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 2px;
+    background: $primary;
+    border-radius: 50px;
+    transition: 0.3s ease-in-out;
+  }
+
+  &:hover {
+    &:after {
+      width: 100%;
+    }
+  }
+}
+
 
 /****************************************
 Responsive Classes
