--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -433,7 +433,7 @@
               </ul>
               <!-- navbar items end -->
               <div class="buttons">
-                <iframe id="embedeButton" src="https://appscode.com/embed/?color=ffffff&text=00994a" frameborder="0" scrolling="no" style="height: 40px; margin-bottom: 8px; width: 185px; overflow: hidden;"></iframe>
+                <iframe id="embedButton" src="https://appscode.com/embed/?color=ffffff&text=00994a" frameborder="0" scrolling="no" style="height: 40px; margin-bottom: 8px; width: 185px; overflow: hidden;"></iframe>
                 <!-- <a id="ac-sign-in-button" href="https://accounts.appscode.com/user/login"
                 class="button ac-button is-primary is-outlined is-loading"><span>SIGN IN</span></a> -->
                 <a href="{{ $.Site.Params.domain_appscode }}/contact/"
