--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -126,7 +126,7 @@
             <!-- brand logo  -->
             <div class="navbar-brand">
               <a href="{{.Site.Params.domain_appscode}}">
-                <img src="/blog/{{$.Site.Data.products.appscode.logoWhite.src}}"
+                <img src="/blog/{{$.Site.Data.products.appscode.logoBlackWhite.src}}"
                   alt="{{$.Site.Data.products.appscode.logo.alt}}" class="white-logo"/>
                   <img src="/blog/{{$.Site.Data.products.appscode.logo.src}}" class="color-logo"
                   alt="{{$.Site.Data.products.appscode.logo.alt}}" />
