Use appscode logos
Signed-off-by: Tamal Saha <tamal@appscode.com>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -23,7 +23,7 @@
   </script>
   <meta charset="UTF-8" />
   <meta name="description"
-    content="AppsCode's latest news and announcements, tips and tricks for our cloud-native ecosystem and products such as KubeDB, Stash, Voyager, ByteBuilders, KubeVault, and many more.">
+    content="AppsCode's latest news and announcements, tips and tricks for our cloud-native ecosystem and products such as KubeDB, Stash, Voyager, KubeVault, and many more.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <meta name="theme-color" content="#0071BD" />
@@ -60,9 +60,9 @@
   <meta property="og:image" content="{{ $cropped.Permalink }}" />
   {{ else }}
   <meta name="twitter:image:src"
-    content="{{ $.Site.BaseURL }}assets/images/products/bytebuilders/bytebuilders-1280x640.png" />
+    content="{{ $.Site.BaseURL }}assets/images/products/appscode/appscode-1280x640.png" />
   <meta property="og:image"
-    content="{{ $.Site.BaseURL }}assets/images/products/bytebuilders/bytebuilders-1280x640.png" />
+    content="{{ $.Site.BaseURL }}assets/images/products/appscode/appscode-1280x640.png" />
   {{ end }}
   <meta property="og:title" content="{{ .Title }}" />
   <meta property="og:description" content="{{ $p.tagline | plainify }}" />
