Fix company name css
Signed-off-by: mohin7 <csemohin@gmail.com>

--- a/static/assets/sass/layouts/_blog-page.scss
+++ b/static/assets/sass/layouts/_blog-page.scss
@@ -161,7 +161,7 @@
       margin-bottom: 8px;
     }
 
-    a.company {
+    .company {
       font-family: "Roboto Mono";
       font-style: normal;
       font-weight: 400;
