Fix author name case sensetive issue
Signed-off-by: mohin7 <csemohin@gmail.com>

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -32,7 +32,7 @@
              <!-- author start  -->
                {{ range $authorName := $p.Params.authors }}
                 {{ range site.Data.authors }}
-                  {{ if eq .name $authorName}}
+                  {{ if eq (lower .name) (lower $authorName) }}
                       <div class="author">
                         <a href="{{$.Site.Params.basePath}}authors/{{ .name | urlize }}" class="author-image"><img
                             src="{{$.Site.Params.basePath}}{{ .profile }}"
