--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -29,7 +29,7 @@
             <div class="is-flex authors">
              {{ range $authorName := .Params.authors }}
                 {{ range site.Data.authors }}
-                  {{ if eq .name $authorName}}
+                  {{ if eq (lower .name) (lower $authorName) }}
                       <div class="author">
                         <a href="{{$.Site.Params.basePath}}authors/{{ .name | urlize }}" class="author-image"><img
                             src="{{$.Site.Params.basePath}}{{.profile}}"
