--- a/static/assets/sass/main.scss
+++ b/static/assets/sass/main.scss
@@ -2,6 +2,7 @@
 // Author: AppsCode
 // Version: 0.0.1
 //Utilities - Base styles, variables, mixins
+// sass --watch main.scss:main.css 
 @import "base/utilities/_initial-variable";
 @import "base/utilities/_default";
 // @import "base/utilities/_themes";
