--- a/static/assets/sass/components/_navbar.scss
+++ b/static/assets/sass/components/_navbar.scss
@@ -971,6 +971,7 @@
 }
 iframe#notification {
   height: 30px;
+  background: linear-gradient(-100deg,#fb00ff,#c4b702 32%,#fe4d5d 70%,#ff7900);
 }
 @media (max-width: 325px) {
   iframe#notification {
