--- a/static/assets/sass/components/_navbar.scss
+++ b/static/assets/sass/components/_navbar.scss
@@ -871,7 +871,7 @@
     width: 270px;
     padding: 0.2rem 0.875rem;
 
-    2 &:focus {
+    &:focus {
       border: none;
       outline: none;
     }
@@ -969,7 +969,22 @@
     height: 1.5px;
   }
 }
+iframe#notification {
+  height: 30px;
+  background: linear-gradient(-100deg,#fb00ff,#c4b702 32%,#fe4d5d 70%,#ff7900);
+}
+@media (max-width: 325px) {
+  iframe#notification {
+    height: 62px;
+  }
+}
 
+@media (min-width: 326px) and (max-width: 594px) {
+  iframe#notification {
+    height: 45px;
+  }
+}
+     
 /****************************************
 Responsive Classes
 *****************************************/
